syntax = "proto3";
package org.kobe.xbot.Utilities.Entities;

message Coordinate {
  double x = 1;
  double y = 2;
}

message CoordinateList {
  repeated Coordinate coordinates = 1;
}

message ControlPoint {
  double x = 1;
  double y = 2;
  optional double rotationDegrees = 3;
}

message BezierCurve {
  repeated ControlPoint controlPoints = 1;
}

enum RobotDirection {
  FRONT = 0;
  BACK = 1;
}
service VisionCoprocessor {
  rpc RequestBezierPathWithOptions (RequestVisionCoprocessorMessage) returns (BezierCurves);
  rpc RequestPartialAprilTagAlignment (AprilTagAlignmentRequest) returns (AprilTagAlignmentMessage);
}

message AprilTagAlignmentMessage {
  double offsetErrorAngleRadians = 1;
  bool isCenteredConfidently = 2;
  int64 offsetPixelsError = 3;
  AprilTagAlignmentRequest originalRequest = 4;
}

message AprilTagAlignmentRequest {
  int64 threshold_centimeters = 1;
}

message ProbMapDetections {
  repeated RobotDetection robots = 1;
  repeated AlgaeDetection algaes = 2;
  repeated CoralDetection corals = 3;
  optional ReefDetection reef = 4;
}

message RobotDetection {
  double probability = 1;
  ControlPoint pose = 2;
}

message AlgaeDetection {
  double probability = 1;
  ControlPoint pose = 2;
}

message CoralDetection {
  double probability = 1;
  ControlPoint pose = 2;
}

message ReefDetection {
  optional ReefState close = 1;
  optional ReefState close_left = 2;
  optional ReefState close_right = 3;
  optional ReefState far = 4;
  optional ReefState far_right = 5;
  optional ReefState far_left = 6;
}

message ReefState {
  optional BranchState branchA = 1;
  optional BranchState branchB = 2;
}

message BranchState {
  double level_2_probability = 1;
  double level_3_probability = 2;
  double level_4_probability = 3;
}

message RequestVisionCoprocessorMessage {
  ControlPoint start = 1;
  ControlPoint end = 2;
  TraversalOptions options = 3;
  AdditionalArguments arguments = 4;
  optional double safeDistanceInches = 5;
}
enum AprilTagCamera {
  FRONT_LEFT = 0;
  FRONT_RIGHT = 1;
  REAR = 2;
}

enum BranchLevel {
  TROUGH = 0;
  LEVEL_2 = 1;
  LEVEL_3 = 2;
  LEVEL_4 = 3;
}

message AlignToReefAprilTagOptions {
  uint32 aprilTagID = 1;
  AprilTagCamera camera = 2;
  optional BranchLevel branchLevel = 3;
}

enum Alliance {
  BLUE = 0;
  RED = 1;
}

message AdditionalArguments {
  Alliance alliance = 1;
  optional bool goalToBestReefBranch = 2;
  optional bool goalToBestCoralStation = 3;
  optional bool goalToAlgaeStation = 4;
}

message TraversalOptions {
  optional double metersPerSecond = 1;
  optional double finalRotationDegrees = 2;
  optional double accelerationMetersPerSecond = 3;
}
message BezierCurves {
  repeated BezierCurve curves = 1;
  optional TraversalOptions options = 2;
  optional AlignToReefAprilTagOptions alignToReefAprilTagOptions = 3;
}

message BezierCurvesList {
  repeated BezierCurves v = 1;
}
message DoubleList {
  repeated double v = 1;
}
message StringList {
  repeated string v = 1;
}
message IntegerList {
  repeated int32 v = 1;
}
message BytesList {
  repeated bytes v = 1;
}
message LongList {
  repeated int64 v = 1;
}
message FloatList {
  repeated float v = 1;
}
message BoolList {
  repeated bool v = 1;
}
